# application/app/models/location.rb
@@ -6,6 +6,9 @@ class Location < ApplicationRecord
   validates_presence_of :ip, :kind, :continent_code, :continent_name, :country_code, :country_name, :region_code,
                         :region_name, :city, :zip, :latitude, :longitude
 
+  scope :from_ip, ->(ip) { where(ip:) }
+  scope :from_url, ->(url) { where(url:) }
+
   def self.address_is_ip?(address)
     !(address =~ Resolv::AddressRegex).nil?
   end
@@ -14,5 +17,22 @@ class Location < ApplicationRecord
     URI.parse(address)
   rescue URI::InvalidURIError
     false
+  end
+
+  def self.current
+    order(created_at: :desc).first
+  end
+
+  def self.filter_by(params)
+    filter_params = {}
+
+    filter_params.merge!({ url: params[:url] }) if params[:url].present?
+    filter_params.merge!({ ip: params[:ip] }) if params[:ip].present?
+
+    if params.empty?
+      all
+    else
+      where(filter_params)
+    end
   end
 end
